fixes text not being visible due to poor contrast cause by the gradient bg

--- a/_scss/style/_featured_news.scss
+++ b/_scss/style/_featured_news.scss
@@ -1,5 +1,6 @@
 .featured_news {
   color: white;
+  text-shadow: 1px 2px 0 rgba(0, 0, 0, 0.3);
 
   img {
     display: block;
@@ -7,6 +8,10 @@
   }
   .motd {
     margin-top: 50px;
+
+    h6 {
+      text-shadow: none;
+    }
   }
   .caption {
     position: absolute;
